fix map resizing on mobile (close #9)

--- a/suitable-dump.css
+++ b/suitable-dump.css
@@ -42,6 +42,7 @@ h1 {
     margin: 0 auto 20px;
     height: 600px;
     width: 600px;
+    max-width: 100%;
 }
 
 #info-window-text {
@@ -65,6 +66,8 @@ h1 {
     color: white;
     padding: 30px 0;
 }
+
+
 
 @media screen and (max-width: 1000px) {
 	.busted-container {
@@ -99,15 +102,16 @@ h1 {
 @media screen and (max-width: 520px) {
 
 	.busted-container {
-		width: 400px;
+		width: 350px;
 	}
 
 	h1 {
-		font-size: 80px;
+		font-size: 60px;
 		top: -15px;
 	}
 	
 	.cop {
 		width: 50px;
 	}
+		
 }
